kubernetes/apps/overlays/baremetal/applications/jellyseer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseer-ingress
  namespace: jellyseer
  labels:
    name: jellyseer-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    #nginx.ingress.kubernetes.io/whitelist-source-range: 192.168.5.0/24,192.168.1.0/24,10.10.0.0/16
spec:
  rules:
  - host: request.ashman.world
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: jellyseer
            port: 
              number: 80
  tls:
  - hosts:
    - request.ashman.world
    secretName: jellyseer-tls
